# urn_citation

./: 404.html  CHANGELOG.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests.yml
cite2urn/: index.html
ctsurn/: index.html
docs/: reference.md
reference/: index.html
search/: search_index.json
src/urn_citation/: __init__.py  cite2urn.py  ctsurn.py  urns.py
tests/: test_cite2urns.py  test_ctsurns.py  test_urns.py
