[project]
name = "urn-citation"
version = "0.0.1"
description = "A Python library for working with CITE architecture URNs for scholarly citation."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
]
